cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Hole_detection)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.45.0 REQUIRED)
include_directories(${Boost_INCLUDE_DIRS}) 
add_definitions(${PCL_DEFINITIONS})
add_executable(main.out main.cpp)
target_link_libraries(main.out ${PCL_LIBRARIES} ${Boost_LIBRARIES})